@@ -1,3 +1,7 @@
+2003-10-27  Bruno Haible  <bruno@clisp.org>
+
+	* stdbool.h.in: Better support for BeOS.
+
 2003-10-26  Bruno Haible  <bruno@clisp.org>
 
 	* time.d (SYS::DELTA4): Avoid gcc warning.
